--- a/damodarbhaiya.css
+++ b/damodarbhaiya.css
@@ -4,17 +4,26 @@ nav {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: red;
+    color: white;
     font-family: "Baloo 2";
     font-size: 2rem;
+    background: url('img/pastaimg.3.jpg');
+    background-size: contain;
+    background-position: center;
 }
-
+nav > h1{
+background-color: #dc2416e0;
+}
+nav > h3{
+    background-color:#dc2416e0;
+}
 #login a {
     color: black;
     padding: 10px;
 }
 
 #section1 {
+    margin-top: 4vh;
     display: flex;
     flex-direction: column;
     font-size: 2rem;
